Assignment 1 changes - add health checker
