# analyzer/app.py
@@ -120,6 +120,12 @@ def get_reading_stats():
     return stats, 200
 
 
+# Endpoint function for checking health of this service
+    # Called through /health endpoint
+def get_health():
+    return {"status": "Running"}, 200 # If service is running, then it will return 200 which means it's ok
+
+
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api("config/hair-api-1.0.0-swagger.yaml", strict_validation=True, validate_responses=True)
 
